--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: home
 author_profile: true
 header:
-    image: "/assets/images/wolfmoon.jpg"
+    image: "/assets/images/black_stone.jpg"
 ---
