undo overlay text

--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ title: "norrismw.github.io"
 layout: home
 author_profile: true
 header:
-    overlay_image: "/assets/images/black_stone.jpg"
+    image: "/assets/images/black_stone.jpg"
 ---
