--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ title: "Home"
 layout: home
 author_profile: true
 header:
-    image: "/assets/images/site/black_stone.jpg"
+    overlay_image: "/assets/images/site/black_stone.jpg"
 ---
